# simpletb

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
crates/backdrop/: Cargo.toml
crates/backdrop/src/: backdrop.rs  constants.rs  hex_converter.rs  main.rs
crates/handler/: Cargo.toml
crates/handler/src/: main.rs
crates/icons/: Cargo.toml
crates/icons/src/: convert.rs  icons.rs  main.rs
crates/simpletb/: Cargo.toml  build.rs  tauri.conf.json
crates/simpletb/capabilities/: default.json
crates/simpletb/icons/: icon.icns
crates/simpletb/src/: commands.rs  hooks.rs  main.rs
crates/ui/: Cargo.toml
crates/ui/src/: data-blacklist.ts  data-icons.ts  dock.rs  hitbox.rs  hooks.rs  menubar.rs  ui.rs
crates/ui/src/components/ui/: execute-button.tsx  round-menubar.tsx
crates/ui/src/components/widgets/active-window/: index.ts  label.tsx  render.tsx
crates/ui/src/components/widgets/clock/: render.tsx
crates/ui/src/components/widgets/weather/: index.ts  render.tsx
crates/ui/src/displays/: app.tsx  data-icons.ts  data-names.ts  main.tsx  router.tsx
crates/ui/src/displays/data/: data-icons.ts
crates/ui/src/displays/dock/: app.tsx  index.html
crates/ui/src/displays/hitbox/: app.tsx  index.html
crates/ui/src/displays/menubar/: app.tsx  index.html  main.tsx
crates/ui/src/displays/menubar/rounded/: app.tsx  index.html
crates/ui/src/displays/routes/: dock.tsx  hitbox.tsx  menubar.tsx  settings.tsx
crates/ui/src/displays/settings/: app.tsx  index.html
crates/ui/src/dock/: app.tsx  index.html
crates/ui/src/hitbox/: index.html
crates/ui/src/menubar/: app.tsx  index.html
crates/ui/src/menubar/rounded/: index.html
crates/ui/src/settings/: app.tsx  index.html  main.tsx
crates/ui/src/styles/: animations.css  main.css  widgets.css
crates/util/: Cargo.toml
crates/util/src/: constants.rs  geometry.rs  handler.rs  paths.rs  settings.rs  util.rs  windows.rs  windows_api.rs
crates/utils/: Cargo.toml
crates/utils/src/: main.rs
src/: app.tsx  data-icons.ts  data-names.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/dock/: mod.rs
src-tauri/src/hitbox/: mod.rs
src-tauri/src/utils/: blur_window.rs  error_handler.rs  icons_to_buff.rs  mod.rs
src/components/ui/: execute-button.tsx
src/components/widgets/active-window/: label.tsx  render.tsx
src/components/widgets/clock/: render.tsx
src/components/widgets/weather/: render.tsx
src/dock/: index.html
src/hitbox/: app.tsx  index.html
src/round-border/: app.tsx  index.html  main.tsx  style.css
src/settings/: index.html
