[workspace]
members = [
  "crates/backdrop",
  "crates/handler",
  "crates/icons",
  "crates/simpletb",
  "crates/ui",
  "crates/utils",
]
default-members = ["crates/simpletb"]
resolver = "2"

[workspace.lints.clippy]
todo = "deny"

[workspace.build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[workspace.dependencies]
backdrop = { path = "crates/backdrop" }
handler = { path = "crates/handler" }
icons = { path = "crates/icons" }
simpletb = { path = "crates/simpletb" }
ui = { path = "crates/ui" }
utils = { path = "crates/utils" }

tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta.6"
tauri-plugin-process = "2.0.0-beta.3"

winapi = { version = "0.3.9", features = ["winuser", "shellapi"] }
serde = { version = "1", features = ["derive"] }
simple-home-dir = "0.3.3"
active-win-pos-rs = "0.8"
serde_json = "1"
notify = "6.1.1"
ctrlc = "3.4.4"
image = "0.25.1"
regex = "1.10.4"
widestring = "1.1.0"
itertools = "0.12.1"
color-eyre = "0.6.3"
tokio = "1.37.0"
sysinfo = "0.30.11"
lazy_static = "1.4.0"
raw-window-handle = "0.6.1"

[workspace.dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Media",
  "Win32_Media_Multimedia",
  "Win32_Graphics_Gdi",
  "Win32_UI_Controls",
  "Win32_NetworkManagement",
  "Win32_UI_Shell",
  "Win32_UI_HiDpi",
  "Win32_Graphics_Dwm",
  "Win32_System_WindowsProgramming",
  "Win32_System_WinRT",
  "Win32_UI_Accessibility",
]
