[package]
name = "icons"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
name = "icons"
path = "src/icons.rs"

[dependencies]
regex.workspace = true
xml.workspace = true
widestring.workspace = true
util.workspace = true
windows.workspace = true
image.workspace = true
walkdir.workspace = true
