[package]
name = "ui"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
util.workspace = true
backdrop.workspace = true
icons.workspace = true

serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
tauri.workspace = true
windows.workspace = true