[package]
name = "util"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[lib]
name = "util"
path = "src/util.rs"

[dependencies]
tauri.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
serde.workspace = true
handler.workspace = true
windows.workspace = true